# My_ClaudeCode_Market

./: .gitignore
.claude-plugin/: marketplace.json
plugins/acha-maku/.claude-plugin/: plugin.json
plugins/acha-maku/commands/: add_mcp.md  analyze_dir.md  analyze_nest-dir.md  get_self-knowledge.md  init_self.md  search_knowledge.md  search_self-knowledge.md  update_self-knowledge.md
plugins/acha-maku/skills/build_self-dir/: .gitignore  SKILL.md
plugins/acha-maku/skills/build_self-dir/templates/: CLAUDE.md.template
plugins/acha-maku/skills/codex/: .gitignore  README.md  SKILL.md  TROUBLESHOOTING.md
plugins/acha-maku/skills/codex/logs/: 20260125_084056_discussion_codex_1df4f7e0.md  20260126_025947_discussion_pty_ace0a2df.md  20260126_042130_discussion_codex---pty_0ef40437.md  20260126_165040_discussion_codex-cliweb-search_310c21db.md  20260127_054653_discussion_codex-skill-completeness-revie_9d0afce8.md  20260127_063851_discussion_codex-skill-architecture-revie_3622039a.md  _TEMPLATE.md
plugins/acha-maku/skills/codex/scripts/: archive-logs.mjs  check-log-exists.mjs  codex-helper.mjs  package.json  pty-session.mjs
plugins/acha-maku/skills/shift-jis_2_utf8-bom/: .gitignore  README.md  SKILL.md  pyproject.toml
plugins/acha-maku/skills/shift-jis_2_utf8-bom/src/sjis2utf8/: __init__.py  __main__.py  backup.py  cli.py  converter.py  detector.py  logger.py  models.py  scanner.py
